592067:PRDI-171 and PRDI-177 and PRDI-192:Separator space missing in between Top Deals and Brand studio fix and T&C Container is Center Aligned issue fix in css only and Background for A+ content Template 2 has changed issue fix

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/style.css
@@ -54433,7 +54433,7 @@ body .lookbook_wrapper .listing.wrapper .left-block{
         right: 9%;
     }
     
-    #bestPicks{top: 22px;}  /* add for INC144313767 & INC144313553  */
+    /*#bestPicks{top: 22px;}   add for INC144313767 & INC144313553 , commented as part of defect id:PRDI-171 */
 }
    
    
@@ -58065,7 +58065,7 @@ header > .content .top.header_fix .toggle{
 }
 .Manufacturer.Temp03 ul li{
 	margin-bottom: 1px;
-    background: #f5f5f5;	/* TISQAUAT-694 revert*/
+    /* background: #f5f5f5; */
     float: left;
     width: 100%;
 }
@@ -66515,3 +66515,8 @@ body .account .right-account .order-history .product-block li.item .attributes p
   body.page-search .listing.wrapper .right-block .listing-menu{
   	display:none;
   }		/*TISPRDT-1179*/
+ /*  start of PRDI-177 */
+#OfferWrap .Inner .show-termsConditions p {
+	text-align: left !important;
+	}
+	/* End of PRDI-177 */
